<resources>
    <string name="app_name">INWIS</string>
    <string name="selanjutnya">Selanjutnya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="halaman">Halaman</string>
    <string name="pencarian">Pencarian</string>
    <string name="pemandu">Pemandu</string>
    <string name="akun">Akun</string>
    <string name="inwis">INWIS</string>
    <string name="title_home">Jelajahi destinasi wisata diseluruh nusantara.</string>
    <string name="subtitle_home">Dapatkan informasi obyek wisata dan rekomendasi terbaik hanya di wisata kita.</string>
    <string name="oleh_oleh">Oleh-Oleh</string>
    <string name="pantai">Pantai</string>
    <string name="pegunungan">Pegunungan</string>
    <string name="sejarah">Sejarah</string>
    <string name="alam">Alam</string>
    <string name="perbelanjaan">Perbelanjaan</string>
    <string name="seni_budaya">Seni Budaya</string>
    <string name="religi">Religi</string>
    <string name="kampung_menu">Kampung Wisata</string>
    <string name="selengkapnya"><![CDATA[Selengkapnya>>]]></string>
    <string name="destinasi_wisata">DESTINASI WISATA</string>
    <string name="kampung_wisata">Kampung Naga, Jawa Barat.</string>
    <string name="kampung_bena_ntt">Kampung Bena, NTT</string>
    <string name="todo">TODO</string>
    <string name="kampung_naga_jabar">Kampung Naga, JABAR</string>
    <string name="todo1">TODO</string>
    <string name="destinasi_wisata1">Destinasi Wisata</string>
    <string name="sumatera_utara">SUMATERA UTARA</string>
    <string name="sumatera_barat">SUMATERA BARAT</string>
    <string name="inwis_splash">INWIS</string>
    <string name="todo2">TODO</string>
    <string name="hint_search">Apa yang anda cari?</string>
    <string name="sumut">Sumatera Utara</string>
    <string name="todo5">TODO5</string>
    <string name="seacrh_kampung_wisata">Cari Disini</string>
    <string name="toolbar_kampung_wisata">Kampung Wisata</string>
    <string name="nama_akun">hello world</string>
    <string name="email_akun">hello_world@gmail.com</string>
    <string name="pantai1">Pantai</string>
    <string name="pemandu_wisata">Pemandu Wisata</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deskripsi1">Pemandu wisata/Pramuwisata atau kerap disebut tour guide merupakan profesi di bidang pariwisata. Pemandu wisata bertanggung jawab mendampingi wisatawan dan memberikan petunjuk serta bimbingan kepada wisatawan.</string>
    <string name="todo3">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="todo6">TODO</string>
    <string name="inwis_register">INWIS</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk">Masuk</string>
    <string name="todo7">TODO</string>
    <string name="register1">Daftar Di Sini</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="masuk1">Masuk</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="password1">Password</string>
    <string name="email1">Email</string>
    <string name="inwis1">INWIS</string>
    <string name="lanjut">Lanjut</string>
    <string name="selanjutnya1">Selanjutnya</string>
    <string name="side2">Memiliki banyak referensi dan informasi lengkap mengenai obyek wisata yang ada di Indonesia</string>
    <string name="tod8">TODO</string>
    <string name="title_activity_on_board">OnBoardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mulai">mulai</string>
    <string name="onboard_1">Menyajikan berbagai macam rekomendasi rencana perjalanan sesuai keberadaan dan keinginan!</string>
    <string name="onboard_2">Memiliki banyak referensi dan informasi lengkap mengenai obyek wisata yang ada di Indonesia</string>
    <string name="onboard_3">Temukan dan bagikan inspirasi perjalananmu, serta bantu temanmu untuk menemukan obyek wisata yang menarik!</string>
    <string name="onboard_4">Ayo mulai perjalanan mu dan dapatkan informasi serta pengalaman terbaik dalam perjalanan mu bersama Wisata Kita !Ayo mulai perjalanan mu dan dapatkan informasi serta pengalaman terbaik dalam perjalanan mu bersama Wisata Kita!</string>
    <string name="lewati">lewati</string>
    <string name="isi_tujuan">Tujuan Wisata Kita adalah memberikan informasi yang akurat kepada wisatawan lokal ataupun wisatawan asing tentang tempat wisata apa saja yang ada di daerahnya serta letak titik tempat wisata tersebut berada . selain itu wisatawan juga dapat mengetahui fasilitas apa saja yang ada di tempat wisata tersebut .</string>
    <string name="tujuan">Tujuan INWIS</string>
    <string name="isi_misi">Visi Wisata Kita adalah untuk memajukan pariwisata indonesia dan berkontribusi meningkatkan perekonomian indonesia melalui implementasi teknologi serta menjadi perusahaan teknologi pariwisata yang ada di Nusantara.</string>
    <string name="misi">Misi INWIS</string>
    <string name="isi_info">Wisata Kita adalah teknologi pariwisata dengan mengembakan platform teknologi pariwisata yang dapat berkolaborasi dengan pelaku pariwisata dan stakeholder dalam mewujudkan pengetahuan terhadap tempat wisata yang ada di Nusantara melalui digitalisasi .</string>
    <string name="apa_inwis">Apa itu Info INWIS ?</string>
    <string name="tentang_inwis">Tentang INWIS</string>
</resources>