<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="always"
        android:title="@string/halaman"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/pencarian"
        app:showAsAction="always"
        android:title="@string/pencarian"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/pemandu_wisata"
        app:showAsAction="always"
        android:title="@string/pemandu"/>
    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/akun"
        app:showAsAction="always"
        android:title="@string/akun"/>

</menu>