<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pencarian.PencarianFragment">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_search_border"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/hint_search"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:elevation="2dp"
        android:src="@drawable/oleh_oleh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/oleh_oleh"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:elevation="8dp"
        android:src="@drawable/pantai"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/pantai"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView2"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView2"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:elevation="8dp"
        android:src="@drawable/pegunungan"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView2"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView2"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView2"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/pegunungan"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView3"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView3"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView3" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:elevation="8dp"
        android:src="@drawable/sejarah"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView3"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView3"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView3"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/sejarah"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView4"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView4"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView4" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:elevation="8dp"
        android:src="@drawable/alam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/alam"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView5"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView5"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView5" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:elevation="8dp"
        android:src="@drawable/perbelanjaan"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView5"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView5"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView5"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/perbelanjaan"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView6"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView6"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView6" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:elevation="8dp"
        android:src="@drawable/religi"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView6"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView6"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView6"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/religi"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView7"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView7"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView7" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:elevation="8dp"
        android:src="@drawable/seni_budaya"
        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView7"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView7"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView7"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/seni_budaya"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView8"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView8"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView8" />




</androidx.constraintlayout.widget.ConstraintLayout>
